mudança no html r css

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     </header>
 
     <section class="carousel">
-        <div class="slides">
-            <img src="./img/amor.img.png">
-            <img src="./img/caneca.img.png">
-            <img src="./img/dentista.png.png">
+        <div class="slides" id="slide-track">
             <img src="./img/IMG-20250409-WA0004.jpg">
             <img src="./img/IMG-20250409-WA0005.jpg">
             <img src="./img/IMG-20250409-WA0006.jpg">
@@ -51,7 +48,8 @@
         <p>&copy; 2025 Personalize Presente. Todos os direitos reservados.</p>
     </footer>
 
+
 </body>
-<script src="service-worker.js"></script>
 
 </html>
+<script src="service-worker.js"></script>
